kubernetes/apps/network/external-services/app/minio.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0/service.json
apiVersion: v1
kind: Service
metadata:
  name: &app minio
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: 9002
    - name: s3
      port: 9000
  clusterIP: None
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0/endpoints.json
apiVersion: v1
kind: Endpoints
metadata:
  name: &app minio
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 192.168.1.25
    ports:
      - name: http
        port: 9002
      - name: s3
        port: 9000
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app minio
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: internal
  rules:
    - host: &host minio.kyle.fail
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: http
    - host: &s3Host s3.kyle.fail
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: s3

  tls:
    - hosts:
        - *host
        - *s3Host
