kubernetes/apps/network/external-services/app/nas.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0/service.json
apiVersion: v1
kind: Service
metadata:
  name: nas
  labels:
    app.kubernetes.io/name: nas
    app.kubernetes.io/instance: nas
spec:
  type: ExternalName
  externalName: tank.kyle.fail
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
  labels:
    app.kubernetes.io/name: nas
    app.kubernetes.io/instance: nas
spec:
  ingressClassName: internal
  rules:
    - host: &host nas.kyle.fail
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas
                port:
                  number: 443
  tls:
    - hosts:
        - *host
