kubernetes/apps/network/external-services/app/proxmox.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0/service.json
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  labels:
    app.kubernetes.io/name: proxmox
    app.kubernetes.io/instance: proxmox
spec:
  type: ExternalName
  externalName: pve.kyle.fail
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.29.0/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
  labels:
    app.kubernetes.io/name: proxmox
    app.kubernetes.io/instance: proxmox
spec:
  ingressClassName: internal
  rules:
    - host: &host proxmox.kyle.fail
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox
                port:
                  number: 8006
  tls:
    - hosts:
        - *host
